# patience

./: patience.cabal
.github/workflows/: haskell-ci.yml
