cabal-version: 2.0
name:
  patience
version:
  0.3
license:
  BSD3
license-file:
  LICENSE
synopsis:
  Patience diff and longest increasing subsequence
description:
  This library implements the \"patience diff\" algorithm, as well as the patience
  algorithm for the longest increasing subsequence problem.
  .
  Patience diff computes the difference between two lists, for example the
  lines of two versions of a source file.  It provides a good balance of
  performance, nice output for humans, and implementation simplicity.  For more
  information, see <http://alfedenzo.livejournal.com/170301.html> and
  <http://bramcohen.livejournal.com/73318.html>.
category:
  Algorithms, Text
author:
  Keegan McAllister <mcallister.keegan@gmail.com>
  chessai <chessai1996@gmail.com>
maintainer:
  chessai <chessai1996@gmail.com>
homepage:
  https://github.com/chessai/patience
build-type:
  Simple
extra-source-files:
  CHANGELOG.md
  README.md

tested-with:
   GHC == 9.12.0
   GHC == 9.10.1
   GHC == 9.8.2
   GHC == 9.6.6
   GHC == 9.4.8
   GHC == 9.2.8
   GHC == 9.0.2
   GHC == 8.10.7
   GHC == 8.8.4
   GHC == 8.6.5
   GHC == 8.4.4
   GHC == 8.2.2

library
  hs-source-dirs:
    src
  exposed-modules:
    Patience
    Patience.Delta
    Patience.Map
  ghc-options:
    -Wall
  default-language:
    Haskell2010
  build-depends:
      base >= 4.3 && < 5
        -- Maybe bump base lower bound to 4.10 since this matches containers-0.5.9
    , containers >= 0.5.9 && < 0.8

source-repository head
  type: git
  location: https://github.com/chessai/patience.git
